[#10805] Support bulk group operations
